# binder

./: build.py  make_bindings_via_cmake.py
.github/workflows/: main.yml
docker/: Dockerfile
examples/example_struct/: config.cfg
source/: CMakeLists.txt
test/: CMakeLists.txt
